--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <main>
   <section class="inner d-flex justify-content-center pt-5">
     <div class=" w-75 mt-5 position-relative">
-      <span class="badge fs-6 rounded-pill position-absolute end-0 mt-1 me-2 px-4 py-3">Find</span>
+      <span class="badge fs-6 rounded-pill position-absolute end-0 mt-1 me-2 px-md-4 py-3">Find</span>
       <input type="email" class="form-control rounded-pill p-3" id="demo" placeholder="find your location...">
     </div>
   </section>
@@ -71,8 +71,8 @@
   <div class="row justify-content-between ">
     <div class="col-md-8 ">
       <div class="mb-3 w-100 position-relative">
-        <span class="badge fs-6 fw-light rounded-pill  position-absolute end-0 mt-1 me-2 px-4 py-3">Subscribe</span>
-        <input type="email" class="form-control rounded-pill p-3" id="exampleFormControlInput1" placeholder="Enter Your Email To Subscribe">
+        <span class="badge fs-6 fw-light rounded-pill  position-absolute end-0 mt-1 me-2 px-md-4 py-3">Subscribe</span>
+        <input type="email" class="form-control rounded-pill p-3 x" id="exampleFormControlInput1" placeholder="Enter Your Email To Subscribe">
       </div>
       <p>
         Copyright 2014 Company name. Designed by Themezy. All rights reserved</p>
