--- a/index(contact).html
+++ b/index(contact).html
@@ -69,14 +69,14 @@
       <div class="container w-75 mt-4">
 <div class="row">
   <div class="col-md-5">
-<div class=" desc w-75  h-75 rounded-5 d-flex flex-column justify-content-end">
+<div class=" desc w-75  h-75  rounded-5 d-flex flex-column justify-content-end">
 <div class="ms-2 company_name">
   <span></span>
   <p class="m-1">Company Name INC.</p>
   <p class="m-1">
     2803 Avenue Street, Los Angeles</p>
 </div>
-<div class="d-flex gap-4 mb-4 ms-2">
+<div class="d-flex flex-wrap gap-row-4 mb-4 ms-2">
 
   <div>
     <span></span>
